--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -114,7 +114,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://download.pytorch.org/whl/cu118\n",
+      "Requirement already satisfied: torch in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (2.5.1+cu118)\n",
+      "Requirement already satisfied: torchvision in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (0.20.1+cu118)\n",
+      "Requirement already satisfied: torchaudio in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (2.5.1+cu118)\n",
+      "Requirement already satisfied: filelock in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch) (3.16.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch) (4.9.0)\n",
+      "Requirement already satisfied: networkx in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch) (3.1.3)\n",
+      "Requirement already satisfied: fsspec in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch) (2024.2.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch) (1.13.1)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from sympy==1.13.1->torch) (1.3.0)\n",
+      "Requirement already satisfied: numpy in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torchvision) (1.26.4)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torchvision) (10.4.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in d:\\wpsystem\\s-1-5-21-1999681464-3322956484-852366516-1001\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from jinja2->torch) (2.1.4)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"
    ]
@@ -592,105 +613,36 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import subprocess\n",
-    "\n",
-    "# Chemin de base des clusters\n",
-    "output_base_dir = r\"D:\\EPF\\5A\\projet\\dataset\\cluster\"  # Assurez-vous que ce chemin est correct\n",
-    "n_clusters = 3  # Nombre total de clusters à traiter (ajuste selon ton cas)\n",
-    "\n",
-    "# Fonction pour lancer YOLOv5 pour chaque cluster\n",
-    "def train_yolov5_for_cluster(cluster_label):\n",
-    "    # Changer de répertoire vers le dossier yolov5 avant d'exécuter la commande\n",
-    "    os.chdir(r\"D:\\EPF\\5A\\projet\\yolov5\")  # Change de répertoire vers yolov5\n",
-    "    \n",
+    "# Fonction pour générer et afficher les commandes pour YOLOv5\n",
+    "def print_yolov5_commands_for_cluster(cluster_label):\n",
     "    # Chemin relatif vers le fichier dataset.yaml du cluster\n",
     "    yaml_filepath = os.path.join(\"..\", \"dataset\", \"cluster\", f\"cluster_{cluster_label}\", \"dataset.yaml\")\n",
-    "    print(os.path.abspath(yaml_filepath))\n",
     "    \n",
     "    # Construire la commande pour YOLOv5\n",
     "    command = [\n",
-    "        \"python\", \"train.py\",  # Lancer le script d'entraînement de YOLOv5 depuis le répertoire yolov5\n",
-    "        \"--img\", \"640\",  # Taille de l'image\n",
-    "        \"--batch-size\", \"16\",  # Taille du batch\n",
-    "        \"--epochs\", \"50\",  # Nombre d'époques\n",
-    "        \"--data\", yaml_filepath,  # Chemin vers le fichier dataset.yaml du cluster\n",
-    "        \"--weights\", \"yolov5s.pt\",  # Poids pré-entraînés\n",
-    "        \"--project\", f\"model2_yolo5_cluster_{cluster_label}\",  # Nom du répertoire pour les résultats\n",
-    "        \"--name\", f\"experiment_cluster_{cluster_label}\",  # Nom de l'expérience pour le cluster\n",
-    "        \"--exist-ok\",  # Autoriser la réécriture des résultats si le dossier existe déjà\n",
-    "        \"--device\", \"cpu\",  # Utiliser le CPU\n",
-    "        \"--save-period\", \"5\"  # Sauvegarder tous les 5 epochs\n",
+    "        \"python\", \"train.py\",\n",
+    "        \"--img\", \"640\",\n",
+    "        \"--batch-size\", \"16\",\n",
+    "        \"--epochs\", \"50\",\n",
+    "        \"--data\", yaml_filepath,\n",
+    "        \"--weights\", \"yolov5s.pt\",\n",
+    "        \"--project\", f\"model2_yolo5_cluster_{cluster_label}\",\n",
+    "        \"--name\", f\"experiment_cluster_{cluster_label}\",\n",
+    "        \"--exist-ok\",\n",
+    "        \"--device\", \"cpu\",\n",
+    "        \"--save-period\", \"5\"\n",
     "    ]\n",
     "    \n",
-    "    # Exécuter la commande\n",
-    "    subprocess.run(command, check=True)\n",
+    "    # Afficher la commande à exécuter\n",
+    "    print(f\"Commande à exécuter pour le cluster {cluster_label} :\")\n",
+    "    print(\" \".join(command))\n",
+    "    print()\n",
     "\n",
-    "# Parcourir les clusters et exécuter l'entraînement pour chaque cluster\n",
-    "for cluster_label in range(n_clusters):  # Ajuster selon le nombre réel de clusters\n",
-    "    # Lancer l'entraînement YOLOv5 pour ce cluster\n",
-    "    import os\n",
-    "    print(f\"Répertoire courant avant appel: {os.getcwd()}\")\n",
+    "# Parcourir les clusters et afficher les commandes pour chaque cluster\n",
+    "for cluster_label in range(n_clusters):\n",
+    "    print_yolov5_commands_for_cluster(cluster_label)\n",
     "\n",
-    "    train_yolov5_for_cluster(cluster_label)\n",
-    "\n",
-    "print(\"Entraînement de YOLOv5 terminé pour tous les clusters.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import subprocess\n",
-    "\n",
-    "# Chemin de base des clusters\n",
-    "output_base_dir = r\"D:\\EPF\\5A\\projet\\dataset\\cluster\"  # Assurez-vous que ce chemin est correct\n",
-    "n_clusters = 3  # Nombre total de clusters à traiter (ajuste selon ton cas)\n",
-    "\n",
-    "# Fonction pour lancer YOLOv5 pour chaque cluster\n",
-    "import subprocess\n",
-    "\n",
-    "def train_yolov5_for_cluster(cluster_label):\n",
-    "    os.chdir(r\"D:\\EPF\\5A\\projet\\yolov5\")  # Change de répertoire vers yolov5\n",
-    "    \n",
-    "    yaml_filepath = os.path.abspath(os.path.join(\"..\", \"dataset\", \"cluster\", f\"cluster_{cluster_label}\", \"dataset.yaml\"))\n",
-    "    \n",
-    "    command = [\n",
-    "        \"python\", \"train.py\",  # Lancer le script d'entraînement de YOLOv5\n",
-    "        \"--img\", \"640\",  # Taille de l'image\n",
-    "        \"--batch-size\", \"16\",  # Taille du batch\n",
-    "        \"--epochs\", \"50\",  # Nombre d'époques\n",
-    "        \"--data\", yaml_filepath,  # Chemin vers le fichier dataset.yaml\n",
-    "        \"--weights\", \"yolov5s.pt\",  # Poids pré-entraînés\n",
-    "        \"--project\", f\"model2_yolo5_cluster_{cluster_label}\",  # Nom du répertoire pour les résultats\n",
-    "        \"--name\", f\"experiment_cluster_{cluster_label}\",  # Nom de l'expérience pour le cluster\n",
-    "        \"--exist-ok\",  # Autoriser la réécriture des résultats si le dossier existe déjà\n",
-    "        \"--device\", \"cpu\",  # Utiliser le CPU\n",
-    "        \"--save-period\", \"5\"  # Sauvegarder tous les 5 epochs\n",
-    "    ]\n",
-    "    \n",
-    "    try:\n",
-    "        # Rediriger les erreurs et la sortie standard\n",
-    "        result = subprocess.run(command, check=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
-    "        print(result.stdout.decode())  # Afficher la sortie standard\n",
-    "        print(result.stderr.decode())  # Afficher les erreurs\n",
-    "    except subprocess.CalledProcessError as e:\n",
-    "        print(f\"Erreur lors de l'exécution de la commande : {e}\")\n",
-    "        print(f\"Code de retour : {e.returncode}\")\n",
-    "        print(f\"Sortie d'erreur : {e.stderr.decode()}\")\n",
-    "        print(f\"Sortie standard : {e.stdout.decode()}\")\n",
-    "\n",
-    "# Parcourir les clusters et exécuter l'entraînement pour chaque cluster\n",
-    "for cluster_label in range(n_clusters):  # Ajuster selon le nombre réel de clusters\n",
-    "    # Lancer l'entraînement YOLOv5 pour ce cluster\n",
-    "    print(f\"Répertoire courant avant appel: {os.getcwd()}\")\n",
-    "\n",
-    "    train_yolov5_for_cluster(cluster_label)\n",
-    "\n",
-    "print(\"Entraînement de YOLOv5 terminé pour tous les clusters.\")\n"
+    "print(\"Toutes les commandes ont été affichées. Copiez-les et exécutez-les manuellement dans le terminal où se situe votre .\")"
    ]
   },
   {
@@ -724,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
